Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_pred[[\"acceleration\", \"displacement\", \"horsepower\", \"weight\"]].hist(figsize  = [6, 6]);\n",
     "# Your code here"
    ]
   },
