Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_features[[\"acceleration\", \"displacement\", \"horsepower\", \"weight\"]].hist(figsize  = [6, 6]);\n",
+    "boston_features.hist(figsize  = [6, 6]);\n",
     "# Your code here"
    ]
   },
